SUBDIRS = tuple\
	  stack\
	  point\
	  htable\
	  uset\
	  quad\
	  hex\
	  tri\
	  math\
	  mesh\
	  dofmap\
	  gather_scatter\
	  krylov\
	  bc

TESTS = tuple/tuple_test\
	stack/stack_test\
	point/point_test\
	htable/htable_test\
	uset/uset_test\
	quad/quad_test\
	hex/hex_test\
	tri/tri_test\
	math/math_test\
	mesh/mesh_test\
	dofmap/dofmap_test\
	gather_scatter/gather_scatter_test\
	krylov/krylov_test\
	bc/bc_test

# Note we need to list .pf and runner scripts manually
EXTRA_DIST = \
	mesh/mesh_parallel.pf\
	quad/quad.pf\
	gather_scatter/gather_scatter_parallel.pf\
	krylov/krylov.pf\
	hex/hex.pf\
	tri/tri.pf\
	bc/bc.pf\
	tuple/tuple.pf\
	point/point.pf\
	dofmap/dofmap_parallel.pf\
	uset/uset_i4.pf\
	uset/uset_r8.pf\
	uset/uset_i8.pf\
	math/math_parallel.pf\
	stack/stack_r8.pf\
	stack/stack_i4t4.pf\
	stack/stack_i4.pf\
	stack/stack_i4t2.pf\
	stack/stack_i8.pf\
	stack/stack_nq.pf\
	stack/stack_nh.pf\
	htable/htable_i4t2.pf\
	htable/htable_i8.pf\
	htable/htable_pt.pf\
	htable/htable_r8.pf\
	htable/htable_i4.pf\
	htable/htable_i4t4.pf\
	mesh/mesh_test\
	gather_scatter/gather_scatter_test\
	dofmap/dofmap_test\
	math/math_test
